force-app/main/default/objects/Entry__c/Entry__c.object-meta.xml
<CustomObject>
    <description>Created by JW
Business Unit: BLDG
Description: Tracks different check-ins / entries on a log such as a Security DAR.</description>
    <label>Entry</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>