force-app/main/default/objects/Entry__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Created by JW
Business Unit: BLDG
Description: Tracks what observations/notes occurred at this location.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What were your observations at this location? What did you check, what did you notice, and who did you interact with?</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>