force-app/main/default/objects/Entry__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Created by VC
Business Unit: BLDG
Description: tracks the end time for a entry.</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>