force-app/main/default/objects/Entry__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created by JW
Business Unit: BLDG
Description: tracks the location where this entry takes place</description>
    <label>Location</label>
    <referenceTo>Space__c</referenceTo>
    <relationshipLabel>Entries</relationshipLabel>
    <relationshipName>Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>