force-app/main/default/objects/Entry__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <description>Created by JW
Business Unit: BLDG
Description: Tracks the parent log that this entry is a part of.</description>
    <label>Log</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Entries must be attached to a Daily Action Report.</errorMessage>
        <filterItems>
            <field>Log__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Daily Action Report</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Log__c</referenceTo>
    <relationshipLabel>Entries</relationshipLabel>
    <relationshipName>Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>