force-app/main/default/objects/Entry__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Created by JW
Business Unit: BLDG
Description: Tracks when the entry was recorded.</description>
    <inlineHelpText>When was this entry recorded? (arrival at the location)</inlineHelpText>
    <label>Time</label>
    <type>Time</type>
</CustomField>