force-app/main/default/objects/Entry__c/listViews/All_Entries.listView-meta.xml
<ListView>
    <fullName>All_Entries</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Location__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Entries</label>
</ListView>