force-app/main/default/objects/Entry__c/listViews/Bitwise_41_All_Entries.listView-meta.xml
<ListView>
    <fullName>Bitwise_41_All_Entries</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Location__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Bitwise | 41</value>
    </filters>
    <label>Bitwise | 41 - All Entries</label>
</ListView>