force-app/main/default/objects/Entry__c/listViews/Copy_of_All_Entries.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Entries</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Location__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Security-Weekly Entries</label>
</ListView>